cmake_minimum_required(VERSION 2.6)

#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
#IF(NOT DEFINED ENV{GENFIT})
#   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
#ENDIF(NOT DEFINED ENV{GENFIT})

INCLUDE_DIRECTORIES($ENV{ROOTSYS}/include ${GENFIT}/core ${GENFIT} ${GENFIT}/GFFastKalman)

#set(GFFASTKALMAN_SRC GFFastKalman.cxx)

set(GFFASTKALMAN_HEADERS GFFastKalman.h)

AUX_SOURCE_DIRECTORY($ENV{GENFIT}/GFFastKalman GFFASTKALMAN_SRCS)

#set(GENFIT_LINKDEF  LinkDef.h)
#set(GENFIT_DICTIONARY genfitDict.cxx) 

#FIND_PROGRAM(ROOT_CINT_EXECUTABLE
#	NAMES rootcint
#	PATHS $ENV{ROOTSYS}/bin
#	NO_DEFAULT_PATH)

#ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${GENFIT_DICTIONARY}
#	COMMAND ${ROOT_CINT_EXECUTABLE}
#      	ARGS -f ${CMAKE_BINARY_DIR}/${GENFIT_DICTIONARY} -c -DHAVE_CONFIG_H
#      	-I${GENFIT}/core ${GENFIT_HEADERS} ${GENFIT_LINKDEF}
#      	DEPENDS ${GENFIT_HEADERS} ${GENFIT_LINKDEF})
      	
#message(${CMAKE_BINARY_DIR}/${GENFIT_DICTIONARY})

#SET(GENFIT_SRCS ${GENFIT_SRCS} ${CMAKE_BINARY_DIR}/${GENFIT_DICTIONARY})
#SET(GENFIT_SRCS ${GENFIT_SRCS} ${GENFIT_DICTIONARY})

################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(genfitFK SHARED ${GFFASTKALMAN_SRCS})
TARGET_LINK_LIBRARIES(genfitFK ${ROOT_LIBS} -L${GENFITLIBDIR} -lgenfit -lGeom -lVMC -lEG)

INSTALL(TARGETS genfitFK DESTINATION ${GENFITLIBINSTALLDIR})

