cmake_minimum_required(VERSION 2.8)


#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
#IF(NOT DEFINED ENV{GENFIT})
#   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
#ENDIF(NOT DEFINED ENV{GENFIT})


INCLUDE_DIRECTORIES($ENV{ROOTSYS}/include ${GENFIT}/core ${GENFIT}/RKTrackRep ${GENFIT}/RecoHitExamples)


AUX_SOURCE_DIRECTORY($ENV{GENFIT}/RecoHitExamples MYRECOHITEXAMPLES_SRCS)

SET(MYRECOHITEXAMPLES_HEADERS 
  PixHit.h
  SpacepointHit.h 
  ProlateSpacepointHit.h
  StripHit.h
  WireHit.h
  WirePointHit.h
)

set(MYRECOHITEXAMPLES_LINKDEF  myRecoHitExamplesLinkDef.h)
set(MYRECOHITEXAMPLES_DICTIONARY myRecoHitExamplesDict.cxx) 

FIND_PROGRAM(ROOT_CINT_EXECUTABLE
	NAMES rootcint
	PATHS $ENV{ROOTSYS}/bin
	NO_DEFAULT_PATH)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${MYRECOHITEXAMPLES_DICTIONARY}
	COMMAND ${ROOT_CINT_EXECUTABLE}
      	ARGS -f ${CMAKE_BINARY_DIR}/${MYRECOHITEXAMPLES_DICTIONARY} -c -DHAVE_CONFIG_H  -I${GENFIT}/core -I${GENFIT}/RecoHitExamples
      	${MYRECOHITEXAMPLES_HEADERS} ${MYRECOHITEXAMPLES_LINKDEF}
      	DEPENDS ${MYRECOHITEXAMPLES_HEADERS} ${MYRECOHITEXAMPLES_LINKDEF})

SET(MYRECOHITEXAMPLES_SRCS ${MYRECOHITEXAMPLES_SRCS} ${CMAKE_BINARY_DIR}/${MYRECOHITEXAMPLES_DICTIONARY})


################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(myRecoHitExamples SHARED ${MYRECOHITEXAMPLES_SRCS})
TARGET_LINK_LIBRARIES(myRecoHitExamples ${ROOT_LIBS} -L${GENFITLIBDIR} -lgenfit -lgenfitRK  -lGeom -lVMC -lEG)
INSTALL(TARGETS myRecoHitExamples DESTINATION ${GENFITLIBINSTALLDIR} )

