cmake_minimum_required(VERSION 2.6)


#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
IF(NOT DEFINED ENV{GENFIT})
   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
ENDIF(NOT DEFINED ENV{GENFIT})


INCLUDE_DIRECTORIES($ENV{ROOTSYS}/include  $ENV{GENFIT}/core $ENV{GENFIT}/SlTrackRep )


AUX_SOURCE_DIRECTORY($ENV{GENFIT}/SlTrackRep GENFIT_SLTRACKREP_SRCS)

SET(GENFIT_SLTRACKREP_HEADERS SlTrackRep.h)

set(GENFIT_SLTRACKREP_LINKDEF  genfitSlTrackRepLinkDef.h)
set(GENFIT_SLTRACKREP_DICTIONARY genfitSlTrackRepDict.cxx) 

FIND_PROGRAM(ROOT_CINT_EXECUTABLE
	NAMES rootcint
	PATHS $ENV{ROOTSYS}/bin
	NO_DEFAULT_PATH)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${GENFIT_SLTRACKREP_DICTIONARY}
	COMMAND ${ROOT_CINT_EXECUTABLE}
      	ARGS -f ${CMAKE_BINARY_DIR}/${GENFIT_SLTRACKREP_DICTIONARY} -c -DHAVE_CONFIG_H  -I$ENV{GENFIT}/core -I$ENV{VMC}/TGeant3
      	${GENFIT_SLTRACKREP_HEADERS} ${GENFIT_SLTRACKREP_LINKDEF}
      	DEPENDS ${GENFIT_SLTRACKREP_HEADERS} ${GENFIT_SLTRACKREP_LINKDEF})

SET(GENFIT_SLTRACKREP_SRCS ${GENFIT_SLTRACKREP_SRCS} ${CMAKE_BINARY_DIR}/${GENFIT_SLTRACKREP_DICTIONARY})
#SET(GENFIT_SLTRACKREP_SRCS ${GENFIT_SLTRACKREP_SRCS} ${GENFIT_SLTRACKREP_DICTIONARY})

################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(genfitSlTrackRep SHARED ${GENFIT_SLTRACKREP_SRCS})
TARGET_LINK_LIBRARIES(genfitSlTrackRep ${ROOT_LIBS} -lGeom -lVMC -lEG -L$ENV{GENFIT}/lib -lgenfit)
INSTALL(TARGETS genfitSlTrackRep DESTINATION ${GENFITLIBINSTALLDIR} )

